--- a/src/main/resources/ui/Login.fxml
+++ b/src/main/resources/ui/Login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -8,53 +9,76 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.LoginController">
+<BorderPane minHeight="600.0" minWidth="800.0" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.LoginController">
     <center>
-        <AnchorPane prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" BorderPane.alignment="CENTER">
-            <AnchorPane layoutX="227.0" layoutY="1.0" prefHeight="700.0" prefWidth="450.0" style="-fx-background-color: #2c2c2c; -fx-background-radius: 15;">
-                <Pane layoutX="28.0" layoutY="204.0" prefHeight="370.0" prefWidth="394.0" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15;">
-                    <Label layoutX="44.0" layoutY="94.0" prefHeight="28.0" prefWidth="90.0" text="E-mail" />
-                    <TextField fx:id="emailTextField" layoutX="44.0" layoutY="122.0" prefHeight="26.0" prefWidth="307.0" promptText="E-mail" />
-                    <Label layoutX="44.0" layoutY="157.0" prefHeight="28.0" prefWidth="90.0" text="Senha" />
-                    <PasswordField fx:id="setSenhaField" layoutX="44.0" layoutY="184.0" prefHeight="26.0" prefWidth="307.0" promptText="Senha" />
-                    <Button fx:id="entrarBotao" layoutX="130.0" layoutY="240.0" mnemonicParsing="false" onAction="#onEntrar" prefHeight="26.0" prefWidth="134.0" style="-fx-background-color: #5A189A;" text="Entrar" textFill="#ececec">
-                        <font>
-                            <Font name="System Bold" size="12.0" />
-                        </font>
-                    </Button>
-                    <Button fx:id="cadastreseBotao" layoutX="199.0" layoutY="295.0" mnemonicParsing="false" onAction="#onCadastrase" prefHeight="26.0" prefWidth="91.0" style="-fx-background-color: #e5a000;" text="Cadastre-se" textFill="WHITE">
-                        <font>
-                            <Font name="System Bold" size="12.0" />
-                        </font>
-                    </Button>
-                    <Label layoutX="89.0" layoutY="298.0" text="Já tem cadastro?">
-                  <font>
-                     <Font size="14.0" />
-                  </font></Label>
-               <Text fill="#5a189a" layoutX="165.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Entrar">
-                  <font>
-                     <Font name="System Bold" size="24.0" />
-                  </font>
-               </Text>
-                </Pane>
-                <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="187.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true">
+        <AnchorPane style="-fx-background-color: #2C2C2C;" BorderPane.alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox alignment="CENTER" spacing="20" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="50.0">
+                <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                     <Image url="@images/logo_app.png" />
                 </ImageView>
-            <Button fx:id="voltarBotao" layoutX="195.0" layoutY="611.0" mnemonicParsing="false" onAction="#onVoltar" prefHeight="27.0" prefWidth="60.0" style="-fx-border-radius: 6; -fx-background-radius: 6; -fx-background-color: #978e8e;" text="Voltar" textFill="#515151">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Button>
-            <Text fill="#e5a000" layoutX="139.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System" wrappingWidth="175.61328125">
-               <font>
-                  <Font name="System Bold" size="30.0" />
-               </font>
-            </Text>
-            </AnchorPane>
+                <Text fill="#e5a000" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System" textAlignment="CENTER">
+                   <font>
+                      <Font name="System Bold" size="30.0" />
+                   </font>
+                </Text>
+                
+                <VBox alignment="CENTER" maxWidth="450.0" spacing="15" style="-fx-background-color: #FFFFFF; -fx-background-radius: 15; -fx-padding: 40;">
+                   <Text fill="#5a189a" strokeType="OUTSIDE" strokeWidth="0.0" text="Entrar" textAlignment="CENTER">
+                      <font>
+                         <Font name="System Bold" size="24.0" />
+                      </font>
+                      <VBox.margin>
+                         <Insets bottom="20.0" />
+                      </VBox.margin>
+                   </Text>
+                   
+                    <Label text="E-mail" />
+                    <TextField fx:id="emailTextField" maxWidth="400.0" prefHeight="35.0" promptText="E-mail" />
+                    
+                    <Label text="Senha">
+                       <VBox.margin>
+                          <Insets top="10.0" />
+                       </VBox.margin>
+                    </Label>
+                    <PasswordField fx:id="setSenhaField" maxWidth="400.0" prefHeight="35.0" promptText="Senha" />
+                    
+                    <Button fx:id="entrarBotao" maxWidth="200.0" mnemonicParsing="false" onAction="#onEntrar" prefHeight="35.0" prefWidth="200.0" style="-fx-background-color: #5A189A;" text="Entrar" textFill="#ececec">
+                        <font>
+                            <Font name="System Bold" size="12.0" />
+                        </font>
+                        <VBox.margin>
+                           <Insets top="20.0" />
+                        </VBox.margin>
+                    </Button>
+                    
+                    <HBox alignment="CENTER" spacing="10">
+                       <VBox.margin>
+                          <Insets top="30.0" />
+                       </VBox.margin>
+                       <Label text="Já tem cadastro?">
+                          <font>
+                             <Font size="14.0" />
+                          </font>
+                       </Label>
+                       <Button fx:id="cadastreseBotao" mnemonicParsing="false" onAction="#onCadastrase" style="-fx-background-color: #e5a000;" text="Cadastre-se" textFill="WHITE">
+                           <font>
+                               <Font name="System Bold" size="12.0" />
+                           </font>
+                       </Button>
+                    </HBox>
+                </VBox>
+                
+                <Button fx:id="voltarBotao" mnemonicParsing="false" onAction="#onVoltar" prefHeight="30.0" prefWidth="80.0" style="-fx-border-radius: 6; -fx-background-radius: 6; -fx-background-color: #978e8e;" text="Voltar" textFill="#515151">
+                   <font>
+                      <Font name="System Bold" size="12.0" />
+                   </font>
+                </Button>
+            </VBox>
         </AnchorPane>
     </center>
 </BorderPane>
