--- a/src/main/resources/ui/MenuPrincipal.fxml
+++ b/src/main/resources/ui/MenuPrincipal.fxml
@@ -1,75 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Rectangle2D?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuPrincipalController">
+<BorderPane minHeight="600.0" minWidth="800.0" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.MenuPrincipalController">
+   <top>
+      <VBox style="-fx-background-color: #2c2c2c;">
+         <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-padding: 20;">
+            <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@images/logo_app.png" />
+            </ImageView>
+            <Text fill="#e5a000" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Text>
+            <Region HBox.hgrow="ALWAYS" />
+            <Button fx:id="loginB" alignment="CENTER" mnemonicParsing="false" onAction="#handleLogin" prefHeight="30.0" prefWidth="80.0" style="-fx-border-color: #9c27b0; -fx-background-color: #9c27b0; -fx-border-radius: 6px; -fx-background-radius: 6px;" text="Entrar" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button fx:id="registerB" alignment="CENTER" mnemonicParsing="false" onAction="#handleRegister" prefHeight="30.0" prefWidth="110.0" style="-fx-background-color: #e5a000; -fx-border-radius: 6px; -fx-background-radius: 6px;" text="Cadastre-se" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+         </HBox>
+         <Separator />
+      </VBox>
+   </top>
+   <center>
 
-      <Button fx:id="loginB" alignment="CENTER" layoutX="658.0" layoutY="50.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="27.0" prefWidth="71.0" style="-fx-border-color: #9c27b0; -fx-background-color: #9c27b0; -fx-border-radius: 6px; -fx-background-radius: 6px;" text="Entrar" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
-      <Button fx:id="registerB" alignment="CENTER" layoutX="747.0" layoutY="50.0" mnemonicParsing="false" onAction="#handleRegister" prefHeight="27.0" prefWidth="104.0" style="-fx-background-color: #e5a000; -fx-border-radius: 6px; -fx-background-radius: 6px;" text="Cadastre-se" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
-      <Button fx:id="exitB" alignment="CENTER" layoutX="415.0" layoutY="624.0" mnemonicParsing="false" onAction="#handleExit" prefHeight="27.0" prefWidth="71.0" style="-fx-border-radius: 6px; -fx-background-radius: 6px; -fx-background-color: #978e8e;" text="Sair" textFill="#515151">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
-      <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="32.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
-         <viewport>
-            <Rectangle2D />
-         </viewport>
-            <Image url="@images/logo_app.png" />
-      </ImageView>
-      <Text fill="#e5a000" layoutX="138.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System" wrappingWidth="168.0">
-         <font>
-            <Font name="System Bold" size="24.0" />
-         </font>
-      </Text>
-      <Separator layoutY="103.0" prefHeight="0.0" prefWidth="900.0" />
-      <Text fill="#9c27b0" layoutX="163.0" layoutY="193.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transforme o seu corpo" wrappingWidth="574.13671875">
-         <font>
-            <Font name="System Bold" size="50.0" />
-         </font>
-      </Text>
-      <Text fill="#978e8e" layoutX="66.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerencie os seus treinos, acompanhe seu progresso e alcance seus objetivos com o sistema mais completo de gestão fitness." wrappingWidth="768.13671875">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
-      <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="697.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@images/muque.png" />
-      </ImageView>
-      <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="410.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@images/logo_registro.png" />
-      </ImageView>
-      <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="112.0" layoutY="350.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@images/halter_pequeno.png" />
-      </ImageView>
-      <Text fill="#978e8e" layoutX="55.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Treinos personalizados" wrappingWidth="194.0">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Text>
-      <Text fill="#978e8e" layoutX="369.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gestão de usuários" wrappingWidth="162.0">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Text>
-      <Text fill="#978e8e" layoutX="606.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Acompanhe indicadores pessoais" wrappingWidth="282.0">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Text>
-</AnchorPane>
+      <VBox alignment="CENTER" spacing="30" style="-fx-padding: 40;">
+         <Text fill="#9c27b0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transforme o seu corpo" textAlignment="CENTER" wrappingWidth="700.0">
+            <font>
+               <Font name="System Bold" size="50.0" />
+            </font>
+         </Text>
+         <Text fill="#978e8e" strokeType="OUTSIDE" strokeWidth="0.0" text="Gerencie os seus treinos, acompanhe seu progresso e alcance seus objetivos com o sistema mais completo de gestão fitness." textAlignment="CENTER" wrappingWidth="700.0">
+            <font>
+               <Font size="18.0" />
+            </font>
+         </Text>
+         
+         <HBox alignment="CENTER" spacing="50" style="-fx-padding: 40 0 0 0;">
+            <VBox alignment="CENTER" spacing="15" maxWidth="250.0">
+               <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/halter_pequeno.png" />
+               </ImageView>
+               <Text fill="#978e8e" strokeType="OUTSIDE" strokeWidth="0.0" text="Treinos personalizados" textAlignment="CENTER" wrappingWidth="200.0">
+                  <font>
+                     <Font name="System Bold" size="18.0" />
+                  </font>
+               </Text>
+            </VBox>
+            
+            <VBox alignment="CENTER" spacing="15" maxWidth="250.0">
+               <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/logo_registro.png" />
+               </ImageView>
+               <Text fill="#978e8e" strokeType="OUTSIDE" strokeWidth="0.0" text="Gestão de usuários" textAlignment="CENTER" wrappingWidth="200.0">
+                  <font>
+                     <Font name="System Bold" size="18.0" />
+                  </font>
+               </Text>
+            </VBox>
+            
+            <VBox alignment="CENTER" spacing="15" maxWidth="250.0">
+               <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/muque.png" />
+               </ImageView>
+               <Text fill="#978e8e" strokeType="OUTSIDE" strokeWidth="0.0" text="Acompanhe indicadores pessoais" textAlignment="CENTER" wrappingWidth="250.0">
+                  <font>
+                     <Font name="System Bold" size="18.0" />
+                  </font>
+               </Text>
+            </VBox>
+         </HBox>
+      </VBox>
+   </center>
+   <bottom>
+      <HBox alignment="CENTER" style="-fx-padding: 20;">
+         <Button fx:id="exitB" alignment="CENTER" mnemonicParsing="false" onAction="#handleExit" prefHeight="30.0" prefWidth="80.0" style="-fx-border-radius: 6px; -fx-background-radius: 6px; -fx-background-color: #978e8e;" text="Sair" textFill="#515151">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font>
+         </Button>
+      </HBox>
+   </bottom>
+</BorderPane>
