--- a/src/main/resources/ui/TreinoView.fxml
+++ b/src/main/resources/ui/TreinoView.fxml
@@ -1,48 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.TreinoViewController">
-      <AnchorPane prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;">
-            <AnchorPane prefHeight="700.0" prefWidth="317.0">
-                  <Button fx:id="BListarTR" alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="192.0" minHeight="40.0" minWidth="240.0" mnemonicParsing="false" onAction="#iniciarNovaSessao" style="-fx-background-color: #1E1E1E;" text="Nova Sessão de Treino" textFill="#e5a000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="BEditarTR" alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="267.0" maxHeight="-Infinity" minHeight="40.0" minWidth="240.0" mnemonicParsing="false" onAction="#verHistoricoSessoes" style="-fx-background-color: #1E1E1E;" text="Ver Histórico de Sessões" textFill="#e5a000">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Button>
-                  <ImageView fx:id="ITreino" fitHeight="80.0" fitWidth="100.0" layoutX="15.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@images/muque.png" />
-                  </ImageView>
-                  <Separator layoutX="314.0" layoutY="1.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="6.0" />
-                  <Separator layoutY="109.0" prefHeight="8.0" prefWidth="314.0" />
-                  <ImageView fitHeight="50.0" fitWidth="32.0" layoutX="15.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@images/ver.png" />
-                  </ImageView>
-                  <ImageView fitHeight="50.0" fitWidth="28.0" layoutX="17.0" layoutY="198.0" pickOnBounds="true" preserveRatio="true">
-                        <Image url="@images/ferramenta-lapis.png" />
-                  </ImageView>
-                  <Text fill="#9c27b0" layoutX="108.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Treinos">
-                     <font>
-                        <Font name="System Bold" size="24.0" />
-                     </font>
-                  </Text>
-            </AnchorPane>
-            <AnchorPane layoutX="800.0" layoutY="-11.0" prefHeight="80.0" prefWidth="100.0">
-                  <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="10.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="23.0">
+<BorderPane minHeight="600.0" minWidth="800.0" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.TreinoViewController">
+   <left>
+      <VBox minWidth="250.0" prefWidth="320.0" spacing="10" style="-fx-background-color: #1a1a1a; -fx-padding: 20;">
+         <HBox alignment="CENTER_LEFT" spacing="10">
+            <ImageView fx:id="ITreino" fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@images/muque.png" />
+            </ImageView>
+            <Text fill="#9c27b0" strokeType="OUTSIDE" strokeWidth="0.0" text="Treinos">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Text>
+         </HBox>
+         
+         <Separator>
+            <VBox.margin>
+               <Insets bottom="10.0" top="10.0" />
+            </VBox.margin>
+         </Separator>
+         
+         <VBox spacing="10" VBox.vgrow="ALWAYS">
+            <HBox alignment="CENTER_LEFT" spacing="10">
+               <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/ferramenta-lapis.png" />
+               </ImageView>
+               <Button fx:id="BListarTR" maxWidth="Infinity" mnemonicParsing="false" onAction="#iniciarNovaSessao" prefHeight="40.0" style="-fx-background-color: #1E1E1E;" text="Nova Sessão" textFill="#e5a000" HBox.hgrow="ALWAYS">
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+               </Button>
+            </HBox>
+            
+            <HBox alignment="CENTER_LEFT" spacing="10">
+               <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                  <Image url="@images/ver.png" />
+               </ImageView>
+               <Button fx:id="BEditarTR" maxWidth="Infinity" mnemonicParsing="false" onAction="#verHistoricoSessoes" prefHeight="40.0" style="-fx-background-color: #1E1E1E;" text="Ver Histórico" textFill="#e5a000" HBox.hgrow="ALWAYS">
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+               </Button>
+            </HBox>
+            
+            <Region VBox.vgrow="ALWAYS" />
+            
+            <HBox alignment="CENTER">
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+               <Button fx:id="IFechar" graphicTextGap="10.0" mnemonicParsing="false" onAction="#fecharTela" prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: transparent; -fx-border-color: #978e8e; -fx-border-radius: 8; -fx-background-radius: 8;" text="Voltar" textFill="#978e8e">
+                  <graphic>
+                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                         <Image url="@images/sair.png" />
-                  </ImageView>
-                  <Button fx:id="IFechar" layoutX="10.0" layoutY="12.0" mnemonicParsing="false" onAction="#fecharTela" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" />
-            </AnchorPane>
-      </AnchorPane>
-</AnchorPane>
+                     </ImageView>
+                  </graphic>
+                  <font>
+                     <Font name="System Bold" size="14.0" />
+                  </font>
+               </Button>
+            </HBox>
+         </VBox>
+      </VBox>
+   </left>
+</BorderPane>
